# swf_mover

./: .gitignore  .pre-commit-config.yaml  make-pyrightconfig.sh  makefile  pyproject.toml  pyrightconfig.json
swf_mover/: swf_mover.py
testdata/: avatar05_SkirtRight17.swf
